--- a/Assets/Plugins/SkinnedMeshDecals/package.json
+++ b/Assets/Plugins/SkinnedMeshDecals/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.naelstrof.skinnedmeshdecals",
     "displayName": "Skinned Mesh Decals",
-    "version": "v1.5.3",
+    "version": "1.5.4",
     "unity": "2018.3",
     "description": "Renders decals on arbitrary meshes, for any pipeline."
 }
