--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.19.19",
     "com.unity.collab-proxy": "1.15.18",
-    "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.7",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.textmeshpro": "3.0.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
