--- a/Packages/com.naelstrof.skinnedmeshdecals/package.json
+++ b/Packages/com.naelstrof.skinnedmeshdecals/package.json
@@ -1,7 +1,11 @@
 {
   "name": "com.naelstrof.skinnedmeshdecals",
   "displayName": "Skinned Mesh Decals",
-  "version": "8.0.0",
-  "unity": "2018.3",
-  "description": "Renders decals on arbitrary meshes, for any pipeline."
+  "version": "8.0.1",
+  "unity": "2021.3",
+  "description": "Renders decals on arbitrary meshes, for any pipeline.",
+  "dependencies": {
+    "com.unity.addressables": "1.19.19"
+  },
+  "type": "library"
 }
