--- a/Scripts/Editor/com.naelstrof.skinned-mesh-decals.editor.asmdef
+++ b/Scripts/Editor/com.naelstrof.skinned-mesh-decals.editor.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "com.naelstrof.skinned-mesh-decals.editor",
     "rootNamespace": "",
-    "references": [
-        "GUID:69448af7b92c7f342b298e06a37122aa"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
