--- a/Packages/com.naelstrof.skinnedmeshdecals/Naelstrof.SkinnedMeshDecals.asmdef
+++ b/Packages/com.naelstrof.skinnedmeshdecals/Naelstrof.SkinnedMeshDecals.asmdef
@@ -1,10 +1,7 @@
 {
     "name": "com.naelstrof.skinnedmeshdecals",
     "rootNamespace": "",
-    "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:84651a3751eca9349aac36a66bba901b"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
